# oko-vision

./: .gitignore  CMakeLists.txt  cpplint.cfg
Resources/: app.qrc
SourceFiles/: main.cpp  main_window.cpp  main_window.h  main_window.ui
